Fix that overflow

--- a/juvu/static/css/booking.css
+++ b/juvu/static/css/booking.css
@@ -226,7 +226,7 @@ body{
 .service{
 	float:				left;
 	width:				140px;
-	overflow: none;
+	overflow: hidden;
 }
 
 .price{
